syntax="proto3";

import "google/protobuf/timestamp.proto";

package events;

enum InterfaceOperatingState {
  InterfaceStateUnknown = 0;
  InterfaceStateUp = 1;
  InterfaceStateDown = 2;
}

enum InterfaceType {
  ethernet = 0;
  l2vlan = 1;
  pppoe = 2;
  pptp = 3;
  gre = 4;
  bridge = 5;
  vti = 6;
  cellular = 7;
}

enum CellularInterfaceState {
  CellularStateUnknown = 0;
  CellularStateNoDevice = 1;
  CellularStateConnected = 2;
  CellularStateNoConnection = 3;
  CellularStateNoConnectionFailed = 4;
}

message Interface {
  string interface_name = 1;
  repeated bytes ipv6_addr = 2;
  repeated bytes ipv4_addr = 3;
  InterfaceOperatingState state = 4;
  InterfaceType interface_type = 5;
  CellularInterfaceState cellular_state = 6;
  string current_status = 7;
  repeated bytes global_ipv4_addr = 8;
}

message Interfaces {
  repeated Interface interface = 1;
  string device_sn = 2;
  google.protobuf.Timestamp timestamp = 3;
}

enum PortOperatingState {
  PortStateUnknown = 0;
  PortStateUp = 1;
  PortStateDown = 2;
}

message Port {
  string port_name = 1;
  PortOperatingState state = 2;
}

message Ports {
  repeated Port port = 1;
  string device_sn = 2;
  google.protobuf.Timestamp timestamp = 3;
}
