syntax="proto3";

import "google/protobuf/timestamp.proto";

package metrics;

message VPNTrafficInfo {
  repeated VPNConnInfo conn_info = 1;
  string device_sn = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message VPNConnInfo {
    // @inject_tag: label:"conn_name=?"
    string conn_name = 1;
    // @inject_tag: label:"direction=ingress"
    PacketAndOctetMetrics ingress = 2;
    // @inject_tag: label:"direction=egress"
    PacketAndOctetMetrics egress = 3;
}

message PacketAndOctetMetrics {
    // @inject_tag: labelnames:"conn_name,direction" help:"total packets"
    uint64 packets = 1;
    // @inject_tag: help:"total octets"
    uint64 octets = 2;
}

message DropMetrics {
    // @inject_tag: labelnames:"conn_name,direction" help:"total drop packets"
    uint64 drop_packets = 4;
}
